Fixed spacing on ZTestimonials page and a few more image replacements

--- a/src/pages/about/testimonials.css
+++ b/src/pages/about/testimonials.css
@@ -17,4 +17,8 @@
         align-self: flex-start;
         padding: 0 0 0 16px;
     }
+    .TestimonialsPage .intro h2 {
+        align-self: flex-start;
+        padding: 0 0 0 0;
+    }
 }
